Implement army placement
Runtime bugs exist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,7 @@ Project(Zauberberg)
 
 set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(Zauberberg main.cpp)
-add_executable(Zauberberg game.cpp)
+add_executable(Zauberberg 
+			main.cpp
+			land.cpp
+			game.cpp)
